@@ -99,6 +99,7 @@ ext {
     smackVersion = '4.3.5'
     springAmqpVersion = project.hasProperty('springAmqpVersion') ? project.springAmqpVersion : '3.0.0-M1'
     springDataVersion = project.hasProperty('springDataVersion') ? project.springDataVersion : '2022.0.0-M1'
+    springGraphqlVersion = '1.0.0-M5'
     springKafkaVersion = '3.0.0-M1'
     springRetryVersion = '1.3.1'
     springSecurityVersion = project.hasProperty('springSecurityVersion') ? project.springSecurityVersion : '6.0.0-M1'
@@ -611,6 +612,14 @@ project('spring-integration-gemfire') {
 
         testImplementation project(':spring-integration-stream')
     }
+}
+
+project('spring-integration-graphql') {
+	description = 'Spring Integration GraphQL Support'
+	dependencies {
+		api project(':spring-integration-core')
+		api "org.springframework.graphql:spring-graphql:$springGraphqlVersion"
+	}
 }
 
 project('spring-integration-groovy') {
