@@ -1,0 +1,4 @@
+/**
+ * Provides classes for GraphQL outbound channel adapters.
+ */
+package org.springframework.integration.graphql.outbound;
