@@ -17,6 +17,12 @@ In general the project has been moved to Java 17 baseline and migrated from Java
 [[x6.0-new-components]]
 === New Components
 
+[[x6.0-graphql]]
+=== GraphQL Support
+
+The GraphQL support has been added.
+See <<./graphql.adoc#graphql,GraphQL Support>> for more information.
+
 [[x6.0-general]]
 === General Changes
 
